[package]
name = "advanced_paywall"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
jsonwebtoken = "9"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
moka = { version = "0.12", features = ["future"] }
ndarray = "0.15"
ndarray-rand = "0.14"
linfa = "0.7"
linfa-trees = "0.7"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
envy = "0.4" # Добавлено
